# starwars-information-app

./: README.md  pyproject.toml
starwars_information_app/: app.py  controller.py
